--- a/apps/main/templates/main/index.html
+++ b/apps/main/templates/main/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Artists</title>
-</head>
-<body>
-    <h1>Artists</h1>
-    {% for artist in artists %}
-        <p>Nickname: {{ artist.nickname }}</p>
-    {% endfor %}
-</body>
-</html>
+{% extends 'main/base.html' %}
+
+{% block body %}
+
+<div class="albums-container container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+            {% for artist in artists %}
+                <h3>{{ artist }}</h3>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
+{% endblock %}
