--- a/apps/main/templates/main/index.html
+++ b/apps/main/templates/main/index.html
@@ -34,7 +34,7 @@
                             <div class="img" style="align-self: center; width: 90%; height: 80%; background-color: grey; border-radius: 10px;"></div>
                         </div>
                         <div class="info_div" style="width: 79%; height: 100%;"> 
-                            <p><b style="font-size: 20px;">{{ song.title }}</b><span style="float: right;">{{ song.duration }}sec</span></p>
+                            <p><b style="font-size: 20px;">{{ song.title }}</b><span style="float: right;">{{ song.normalized_duration }}</span></p>
                             <p>Album: {{ song.album.title }}</p>
                         </div>
                     </div>
