--- a/apps/main/static/main/style.css
+++ b/apps/main/static/main/style.css
@@ -1,5 +1,6 @@
 body {
-    background: white url("images/background.png");
+    background-color: #1b1b1b;
+    font-family: Arial, Helvetica, sans-serif;
 }
 ul.errorlist {
     padding-left: 0;
@@ -9,14 +10,50 @@ ul.errorlist > li {
 }
 .navbar {
     border-radius: 0;
+    background-color: black;
+}
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+.navbar-inverse .navbar-brand:hover {
+    color: #1ed760;
 }
 .navbar-brand {
-    font-family: "Satisfy", cursive;
+    width: 50px;
+    font-weight: bold;
+    background-image: url(../../static/main/images//spotify.svg);
+    background-size: 40px 40px;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: 0.5s;
+}
+.navbar-brand:hover{
+    transition: 0.5s;
+    background-size: 140px 40px;
+    width: 140px;
+    background-image: url(../../static/main/images///spotify-logo.svg);
 }
 .glyphicon-star {
-    color: #cccccc;
+    color: #1ed760;
     font-size: 16px;
 }
 .glyphicon-star.active {
-    color: #fdb230;
+    color: #16a548;
+}
+.btn {
+    background-color: #1ed760;
+    border-radius: 10px;
+    border-color: #1b1b1b;
+}
+.btn:hover {
+    background-color: #16a548;
+}
+.form-control {
+    background-color: #1b1b1b;
+    border-radius: 10px;
+    border-color: #1ed760;
+    color: #1ed760;
+}
+.form-control:hover {
+    border-color: #1ed760;
 }
