--- a/apps/main/templates/main/base.html
+++ b/apps/main/templates/main/base.html
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'index' %}">DjangoMVC</a>
+                    <a class="navbar-brand" href="{% url 'index' %}"></a>
                 </div>
 
                 <!-- Items -->
@@ -56,7 +56,7 @@
                                 value="{{ request.GET.q }}"
                             />
                         </div>
-                        <button type="submit" class="btn btn-default">Поиск</button>
+                        <button type="submit" class="btn btn-default">🔍︎</button>
                     </form>
 
                     <ul class="nav navbar-nav navbar-right">
