--- a/apps/main/templates/main/detail.html
+++ b/apps/main/templates/main/detail.html
@@ -13,13 +13,13 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <a href="{% url 'detail' album.id %}">
-                        {% if album.album_logo %}
-                            <img src="{{ album.album_logo.url }}" class="img-responsive">
+                        {% if album.logo %}
+                            <img src="{{ album.logo.url }}" class="img-responsive">
                         {% else %}
                             <h3>Нет картинки</h3>
                         {% endif %}
                     </a>
-                    <h1>{{ album.album_title }} <small>{{ album.genre }}</small></h1>
+                    <h1>{{ album.title }} <small>{{ album.genre.title }}</small></h1>
                     <h2>{{ album.artist }}</h2>
                 </div>
             </div>
@@ -50,37 +50,6 @@
                             <th>Действия</th>
                         </tr>
                         </thead>
-
-                        <tbody>
-                            {% for song in album.song_set.all %}
-                                <tr>
-                                    <td>{{ song.song_title }}</td>
-                                    <td>
-                                        <a target="_blank" href="{{ song.audio_file.url }}">
-                                            <button type="button" class="btn btn-success btn-xs">
-                                                <span class="glyphicon glyphicon-play"></span>&nbsp; Запустить
-                                            </button>
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="{% url 'favorite' song.id %}" class="btn-favorite">
-                                            <span class="glyphicon glyphicon-star {% if song.is_favorite %}active{% endif %}"></span>
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <form action="{% url 'delete_song' album.id song.id %}" method="post" style="display: inline;">
-
-                                            {% csrf_token %}
-
-                                            <input type="hidden" name="song_id" value="{{ song.id }}" />
-                                            <button type="submit" class="btn btn-danger btn-xs">
-                                                <span class="glyphicon glyphicon-remove"></span>&nbsp; Удалить
-                                            </button>
-                                        </form>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
                     </table>
 
                 </div>
